# rust-notes

./: Cargo.toml  Layerfile  README.md
notes/about/: about.md
notes/examples/: markdown_reference.md  why_rust.md
notes/readme/: README.md
src/: main.rs
templates/: index.html  newnote.html  notes.html
web/public/: scripts.js  style.css
