[package]
name = "rust_notes_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5"
actix-web = "3"
serde = "1"
serde_json = "1"
handlebars = { version = "4", features = ["dir_source"] }
mini_markdown = "0.3"
string-join = "0.1"